tests/ui/borrowck/no-invalid-mut-suggestion-for-raw-pointer-issue-127562.stderr
error[E0594]: cannot assign to `*ptr`, which is behind a `*const` pointer
  --> $DIR/no-invalid-mut-suggestion-for-raw-pointer-issue-127562.rs:7:14
   |
LL |     unsafe { *ptr = 3; }
   |              ^^^^^^^^ `ptr` is a `*const` pointer, so it cannot be written to
   |
help: consider changing this to be a mutable pointer
   |
LL -     let ptr = &raw const val;
LL +     let ptr = &raw mut val;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
